@@ -1,14 +1,13 @@
 /**
- * This program is free software: you can redistribute it and/or modify it under the terms of the
- * GNU Lesser General Public License as published by the Free Software Foundation, either version 3
- * of the License, or (at your option) any later version.
+ * This program is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General
+ * Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any
+ * later version.
  *
- * <p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
- * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
+ * <p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
+ * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  *
- * <p>You should have received a copy of the GNU Lesser General Public License along with this
- * program. If not, see <http://www.gnu.org/licenses/>.
+ * <p>You should have received a copy of the GNU Lesser General Public License along with this program. If not, see
+ * <http://www.gnu.org/licenses/>.
  *
  * @author Dana Lambert, Catalyst IT Ltd NZ, Copyright 2020
  */
@@ -17,6 +16,7 @@ package org.geowebcache.swift;
 import static com.google.common.base.Preconditions.checkNotNull;
 import static com.google.common.base.Preconditions.checkState;
 
+import java.io.Serial;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
@@ -38,13 +38,14 @@ import org.jclouds.openstack.swift.v1.blobstore.RegionScopedBlobStoreContext;
 import org.jclouds.openstack.swift.v1.features.ContainerApi;
 
 /**
- * Java object representing the configuration for an Swift blob store. Contains methods for building
- * instance of JClouds API and Blobstore.
+ * Java object representing the configuration for an Swift blob store. Contains methods for building instance of JClouds
+ * API and Blobstore.
  */
 public class SwiftBlobStoreInfo extends BlobStoreInfo {
 
     static Logger log = Logging.getLogger(SwiftBlobStoreInfo.class.getName());
 
+    @Serial
     private static final long serialVersionUID = 9072751143836460389L;
 
     private static final String provider = "openstack-swift";
@@ -85,15 +86,12 @@ public class SwiftBlobStoreInfo extends BlobStoreInfo {
 
         checkNotNull(layers);
         checkState(getName() != null);
-        checkState(
-                isEnabled(),
-                "Can't call SwiftBlobStoreConfig.createInstance() if blob store is not enabled");
+        checkState(isEnabled(), "Can't call SwiftBlobStoreConfig.createInstance() if blob store is not enabled");
         return new SwiftBlobStore(this, layers);
     }
 
     /**
-     * Returns the base prefix, which is a prefix path to use as the root to store tiles under the
-     * bucket.
+     * Returns the base prefix, which is a prefix path to use as the root to store tiles under the bucket.
      *
      * @return optional string for a "base prefix"
      */
@@ -131,12 +129,11 @@ public class SwiftBlobStoreInfo extends BlobStoreInfo {
         overrides.put(Constants.PROPERTY_MAX_CONNECTIONS_PER_CONTEXT, 32);
         overrides.put(Constants.PROPERTY_MAX_RETRIES, 0);
 
-        SwiftApi context =
-                ContextBuilder.newBuilder(provider)
-                        .endpoint(endpoint)
-                        .credentials(identity, password)
-                        .overrides(overrides)
-                        .buildApi(SwiftApi.class);
+        SwiftApi context = ContextBuilder.newBuilder(provider)
+                .endpoint(endpoint)
+                .credentials(identity, password)
+                .overrides(overrides)
+                .buildApi(SwiftApi.class);
 
         ContainerApi containerApi = context.getContainerApi(region);
 
@@ -156,11 +153,10 @@ public class SwiftBlobStoreInfo extends BlobStoreInfo {
         overrides.put(KeystoneProperties.SCOPE, keystoneScope);
         overrides.put(KeystoneProperties.PROJECT_DOMAIN_NAME, keystoneDomainName);
 
-        ContextBuilder builder =
-                ContextBuilder.newBuilder(provider)
-                        .endpoint(endpoint)
-                        .credentials(identity, password)
-                        .overrides(overrides);
+        ContextBuilder builder = ContextBuilder.newBuilder(provider)
+                .endpoint(endpoint)
+                .credentials(identity, password)
+                .overrides(overrides);
 
         return builder.build(RegionScopedBlobStoreContext.class);
     }
@@ -170,24 +166,15 @@ public class SwiftBlobStoreInfo extends BlobStoreInfo {
         String bucket = this.getContainer();
         String prefix = this.getPrefix();
         if (prefix == null) {
-            return String.format("bucket: %s", bucket);
+            return "bucket: %s".formatted(bucket);
         } else {
-            return String.format("bucket: %s prefix: %s", bucket, prefix);
+            return "bucket: %s prefix: %s".formatted(bucket, prefix);
         }
     }
 
     public boolean isValid() {
-        final List<String> fields =
-                Arrays.asList(
-                        new String[] {
-                            endpoint,
-                            identity,
-                            password,
-                            region,
-                            container,
-                            keystoneVersion,
-                            keystoneScope
-                        });
+        final List<String> fields = Arrays.asList(
+                new String[] {endpoint, identity, password, region, container, keystoneVersion, keystoneScope});
 
         return !(fields.contains(null) || fields.contains(""));
     }
